--- a/src/GSalvi.Utility/GSalvi.Utility.csproj
+++ b/src/GSalvi.Utility/GSalvi.Utility.csproj
@@ -1,9 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-    <Version>0.0.1</Version>
+    <TargetFramework>net6.0</TargetFramework>
+    <Version>0.0.2</Version>
     <Authors>Guilherme Salvi</Authors>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
 </Project>
